recipe file to run surge estimator with ERA-Interim

--- a/esmvaltool/recipes/recipe_surgeheight.yml
+++ b/esmvaltool/recipes/recipe_surgeheight.yml
@@ -1,17 +1,17 @@
 ---
 
 datasets:
-#  - {dataset: ERA-Interim,  project: CMIP5,  mip: 6hrPlev, exp: historical,   start_year: 1979,  end_year: 2000}
-  - {dataset: CanESM2,  project: CMIP5,  mip: 6hrPlev, exp: historical,  ensemble: r4i1p1, start_year: 2003,  end_year: 2003}
+  - {dataset: ERA-Interim,  project: OBS, type: reanalysis, version: 1, tier: 3, start_year: 1979,  end_year: 1990}
+#  - {dataset: CanESM2,  project: CMIP5,  mip: 6hrPlev, exp: historical, ensemble: r4i1p1, start_year: 2003,  end_year: 2003}
 
 preprocessors:
 
   preprocessor1:
     extract_time:
-      start_month: 4
+      start_month: 1
       start_day:   1
-      end_month:   1
-      end_day:     7
+      end_month:   12
+      end_day:     31
 #      end_year:    2003
 #    regrid:
 #      target_grid: 0.75x0.75
@@ -48,12 +48,12 @@ diagnostics:
       psl:
         preprocessor: preprocessor1
         field: T2D
-      va: #should be vas!
-        preprocessor: preprocessor2
-        field: T3D
-      ua: #should be uas!
-        preprocessor: preprocessor2
-        field: T3D
+      vas: #should be vas!
+        preprocessor: preprocessor1
+        field: T2D
+      uas: #should be uas!
+        preprocessor: preprocessor1
+        field: T2D
     scripts:
       surge_height:
         script: surge_height/diagnostic.py
