including the relaxed constraints from #733

--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -118,9 +118,11 @@ CMIP5:
 OBS:
   input_dir:
     default: 'Tier[tier]/[dataset]'
+    CDS: ''
     BSC: '[type]/[institute.lower]/[dataset.lower]/[freq_folder]/[short_name][freq_base]'
   input_file:
     default: '[project]_[dataset]_[type]_[version]_[field]_[short_name]_*.nc'
+    CDS: '[project]_[dataset]_[type]_[version]_[field]_[short_name]_*.nc'
     BSC: '[short_name]_*.nc'
   input_fx_dir:
     default: 'Tier[tier]/[dataset]'
@@ -166,11 +168,4 @@ EMAC:
     default: '[dataset]'
   input_file: ''
   output_file: '[dataset]_[ensemble]_[field]_[short_name]_[start_year]-[end_year]'
-  cmor_type: 'CMIP5'
-  
-CDS-OBS:
-  input_dir:
-    default: ''
-  input_file: '[project]_[obssystem]_[dataset]_[level]_[field]_[short_name]*'
-  output_file: '[project]_[obssystem]_[dataset]_[level]_[field]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP5'
