--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -64,6 +64,10 @@ authors:
     name: Bock, Lisa
     institute: DLR, Germany
     email: lisa.bock 'at' dlr.de
+  cagn_ch:
+    name: Cagnazzo, Chiara
+    institute: CNR, Italy
+    email: c.cagnazzo 'at' isac.cnr.it    
   chen_ja:
     name: Chen, Jack
     institute: NCAR, USA
@@ -216,6 +220,10 @@ authors:
     name: Senftleben, Daniel
     institute: DLR, Germany
     email: daniel.senftleben 'at' dlr.de
+  serv_fe:
+    name: Serva, Federico
+    institute: CNR, Italy
+    email: federico.serva 'at' artov.isac.cnr.it    
   somm_ph:
     name: Sommer, Philipp
     institute: Univ. of Hamburg, Germany
@@ -414,6 +422,7 @@ references:
   antonov10usgov: "Antonov, J. I. et al., World Ocean Atlas 2009, Volume 2: Salinity. S. Levitus, Ed. NOAA Atlas NESDIS 69, U.S. Government Printing Office, Washington, D.C., 184 pp., 2010."
   aquila11gmd: "Aquila et al., Geosci. Model Dev. 4, 325-355, doi:10.5194/gmd-4-325-2011, 2011."
   bakker14essd: "Bakker, D. C. E. et al., Earth Syst. Sci. Data, 6, 69-90, doi:10.5194/essd-6-69-2014, 2014."
+  baldwin09qjrms: "Baldwin, D. P. et al., Q. J. R. Meteorol. Soc., 135, 1661-1672, doi:10.1002/qj.479, 2009"
   bianchi12gbc: "Bianchi, D. et al., Global Biogeochem. Cy., 26, GB2009, doi:10.1029/2011GB004209, 2012."
   cionni11acp: "Cionni et al., Atmos. Chem. Phys., 11, 11267-11292, doi:10.5194/acp-11-11267-2011, 2011."
   clivar09jclim: "CLIVAR Madden-Julian Oscillation Working Group, J. Climate, 22, 3006–3030, doi:10.1175/2008JCLI2731.1, 2009."
