--- a/esmvaltool/recipes/recipe_amoc.yml
+++ b/esmvaltool/recipes/recipe_amoc.yml
@@ -17,8 +17,63 @@ documentation:
   projects:
     - ukesm
 
+# datasets:
+#      - {dataset: CanESM2,          project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CCSM4,            project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CESM1-BGC,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CESM1-CAM5-1-FV2, project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CESM1-CAM5,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CESM1-FASTCHEM,   project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CESM1-WACCM,      project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CNRM-CM5-2,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: CNRM-CM5,         project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: FGOALS-g2,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: MIROC5,           project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: MPI-ESM-LR,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: MPI-ESM-MR,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: MPI-ESM-P,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: MRI-CGCM3,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: MRI-ESM1,         project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: NorESM1-ME,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+#      - {dataset: NorESM1-M,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
 
-datasets:
+
+preprocessors:
+
+  prep_timeseries:
+    custom_order: true
+
+  prep_timeseries_drake:
+    extract_named_regions:
+      regions: drake_passage
+
+  prep_transect:
+    custom_order: true
+    extract_named_regions:
+      regions: atlantic_arctic_ocean
+    extract_time:
+      start_year: 2001
+      start_month: 1
+      start_day: 1
+      end_year: 2003
+      end_month: 12
+      end_day: 31
+    time_average:
+
+diagnostics:
+  # --------------------------------------------------
+  # Time series diagnostics
+  # --------------------------------------------------
+  diag_timeseries_amoc:
+    description: atlantic_meridional_overturning_circulation
+    variables:
+      amoc:
+        preprocessor: prep_timeseries
+        field: TOM
+        mip: Omon
+        derive: true
+        force_derivation: false
+    additional_datasets:
      - {dataset: CanESM2,          project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
      - {dataset: CCSM4,            project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
      - {dataset: CESM1-BGC,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
@@ -37,41 +92,37 @@ datasets:
      - {dataset: MRI-ESM1,         project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
      - {dataset: NorESM1-ME,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
      - {dataset: NorESM1-M,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
-
-
-preprocessors:
-
-  prep_timeseries:
-    custom_order: true
-
-  prep_transect:
-    custom_order: true
-    extract_time:
-      start_year: 2001
-      start_month: 1
-      start_day: 1
-      end_year: 2003
-      end_month: 12
-      end_day: 31
-    time_average:
-
-diagnostics:
-  # --------------------------------------------------
-  # Time series diagnostics
-  # --------------------------------------------------
-  diag_timeseries:
-    description: atlantic_meridional_overturning_circulation
-    variables:
-      amoc:
-        preprocessor: prep_timeseries
-        field: TOM
-        mip: Omon
-        derive: true
-        force_derivation: false
     scripts:
-      Regional_Ocean_Surface_mean_timeseries:
+      AMOC_timeseries:
         script: ocean/diagnostic_timeseries.py
         moving_average: 6 years
+
+  diag_timeseries_drake:
+    description: Drake_passge_current
+    variables:
+      mfo:
+        preprocessor: prep_timeseries_drake
+        field: TOM
+        mip: Omon
+    additional_datasets:
+        - {dataset: ACCESS1-0,        project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: ACCESS1-3,        project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: CanESM2,          project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: GFDL-ESM2M,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1862, end_year: 2004}
+        - {dataset: HadGEM2-CC,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: HadGEM2-ES,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: MPI-ESM-LR,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: MPI-ESM-MR,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: MPI-ESM-P,        project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: MRI-CGCM3,        project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: MRI-ESM1,         project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: NorESM1-M,        project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+        - {dataset: NorESM1-ME,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1860, end_year: 2004}
+    scripts:
+     Drake_timeseries:
+        script: ocean/diagnostic_timeseries.py
+        moving_average: 6 years
+
 
   # --------------------------------------------------
   # Transect diagnostics
@@ -83,6 +134,25 @@ diagnostics:
         preprocessor: prep_transect
         field: TO2M
         mip: Omon
+    additional_datasets:
+     - {dataset: CanESM2,          project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 1860,  end_year: 2004}
+     - {dataset: CCSM4,            project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CESM1-BGC,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CESM1-CAM5-1-FV2, project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CESM1-CAM5,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CESM1-FASTCHEM,   project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CESM1-WACCM,      project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CNRM-CM5-2,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: CNRM-CM5,         project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: FGOALS-g2,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: MIROC5,           project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: MPI-ESM-LR,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: MPI-ESM-MR,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: MPI-ESM-P,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: MRI-CGCM3,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: MRI-ESM1,         project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: NorESM1-ME,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+     - {dataset: NorESM1-M,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
     scripts:
       Global_Ocean_surface_map:
         script: ocean/diagnostic_transects.py
