--- a/esmvaltool/recipes/recipe_rainfarm.yml
+++ b/esmvaltool/recipes/recipe_rainfarm.yml
@@ -43,8 +43,8 @@ diagnostics:
         mip: day
         field: T2Ds
     scripts:
-      main:
-        script: rainfarm/main.r
+      rainfarm:
+        script: rainfarm/rainfarm.r
         # RainFARM options 
         # Note - RainFARM usage:  rfarm [-s SLOPE] [-e NENS] [-n NF] [-r REGION] [-w WEIGHTS]
         #                               [-o OUTFILE] [-v VARNAME] [-g] [-c]
