--- a/esmvaltool/recipes/recipe_C3S_511_SPQB_ta.yml
+++ b/esmvaltool/recipes/recipe_C3S_511_SPQB_ta.yml
@@ -18,8 +18,8 @@
 ###############################################################################
 
 datasets:
-#  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: decadal1980,  ensemble: r1i1p1,  start_year: 1999,  end_year: 2000}
-  - {dataset: XCH4, type: sat, project: OBS,  level: L3, version: CDS, start_year: 2003,  end_year: 2016}
+  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: decadal1980,  ensemble: r1i1p1,  start_year: 1999,  end_year: 2000}
+#  - {dataset: XCH4, type: sat, project: OBS,  level: L3, version: CDS, start_year: 2003,  end_year: 2016}
 # looks for: [project]_[obssystem]_[dataset]_[level]_[field]_[short_name]*
 preprocessors:
   noop: {}
@@ -28,18 +28,18 @@ diagnostics:
   SPQB:
     description: Single product quality brief.
     variables:
-#      ta:
-      xch4:
+      ta:
+#      xch4:
         preprocessor: noop
-        field: T2Ms
-#        field: T3Ms
+#        field: T2Ms
+        field: T3Ms
         derive: False
         mip: Amon
     scripts:
       SPQB_basic_report:
-        script: qualassess/DUMMY_C3S_511_SPQB.py
-        levels: None
-#        levels: [30000.]
+        script: qualassess/ta_C3S_511_SPQB.py
+#        levels: None
+        levels: [3.00e+04,8.50e+04,1.00e+02]
         show_latex: False #options are: True/False/no_latex
         
 #  diagnostic1:
