--- a/esmvaltool/recipes/recipe_surgeheight.yml
+++ b/esmvaltool/recipes/recipe_surgeheight.yml
@@ -1,7 +1,7 @@
 ---
 
 datasets:
-  - {dataset: ERA-Interim,  project: OBS, type: reanalysis, version: 1, tier: 3, start_year: 1979,  end_year: 1990}
+  - {dataset: ERA-Interim,  project: OBS, type: reanaly,  mip: 6hrPlev, version: 1, tier: 3, start_year: 1979,  end_year: 1979}
 #  - {dataset: CanESM2,  project: CMIP5,  mip: 6hrPlev, exp: historical, ensemble: r4i1p1, start_year: 2003,  end_year: 2003}
 
 preprocessors:
@@ -10,9 +10,10 @@ preprocessors:
     extract_time:
       start_month: 1
       start_day:   1
+      start_year:    1979
       end_month:   12
       end_day:     31
-#      end_year:    2003
+      end_year:    1979
 #    regrid:
 #      target_grid: 0.75x0.75
 #      scheme: linear
@@ -48,6 +49,7 @@ diagnostics:
       psl:
         preprocessor: preprocessor1
         field: T2D
+        derive: True
       vas: #should be vas!
         preprocessor: preprocessor1
         field: T2D
