--- a/esmvaltool/recipes/recipe_miles_eof.yml
+++ b/esmvaltool/recipes/recipe_miles_eof.yml
@@ -44,7 +44,7 @@ documentation:
     - c3s-magic
 
 datasets:
-   - {dataset: EC-Earth,    project: CMIP5,  exp: historical,  ensemble: r8i1p1,  start_year: 1980,  end_year: 1989}
+   - {dataset: EC-EARTH,    project: CMIP5,  exp: historical,  ensemble: r1i1p1,  start_year: 1980,  end_year: 1989}
    - {dataset: ERA-Interim, project: OBS, type: reanaly, version: 1, tier: 3, start_year: 1980,  end_year: 1989 }
      #- {dataset: ERA-Interim, project: OBS, type: reanaly, version: 1, tier: 3, start_year: 1980,  end_year: 1989, path: "/work/users/jost/esmvaltool2/input/OBS" }
 
