--- a/esmvaltool/recipes/recipe_cvdp.yml
+++ b/esmvaltool/recipes/recipe_cvdp.yml
@@ -1,18 +1,22 @@
+# recipe_cvdp.yml
 ---
+documentation:
+  description: |
+    Recipe for executing the NCAR CVDP package in the ESMValTool framework.
+
+  authors:
+    - phil_ad
+    - broe_bj
+
+  references:
+    - phillips14eos
+
+  projects:
+    - esmval
+    - c3s-magic
 
 datasets:
   - {dataset: MPI-ESM-LR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2002}
-
-#preprocessors:
-#
-#  pp_regrid:
-#    extract_levels:
-#      false
-#    regrid:
-#      target_grid: reference_dataset
-#      scheme: linear
-#    multi_model_statistics:
-#      false
 
 diagnostics:
 
