--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,7 @@ dependencies:
   # Multi language support:
   - ncl
   - ncurses=6.1=hfc679d8_1
-  - julia
+  - julia=1.0.2
   # TODO: add R, julia
 
   - pip:
