--- a/meta.yaml
+++ b/meta.yaml
@@ -63,8 +63,9 @@ requirements:
     - ncurses=6.1=hfc679d8_1
     - gcc
     - r-base
-    - r-rcpp
+    - r-rcpp    
     - libgfortran-ng
+    - cdo
     # TODO: add julia
 test:
   # TODO: add unit tests? This seems to require installing the tests
