reverted to julia 0.6, setup.jl supporting all julia versions

--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,7 @@ dependencies:
   - gcc
   - ncl
   - ncurses=6.1=hfc679d8_1
-  - julia=1.0.2
+  - julia
   - r-base
   - r-rcpp
   - libgfortran-ng # needed by r packages
