--- a/esmvaltool/recipes/examples/recipe_concatenate_exps.yml
+++ b/esmvaltool/recipes/examples/recipe_concatenate_exps.yml
@@ -7,17 +7,26 @@ datasets:
 
 diagnostics:
 
+  diag_regular:
+    description: Only use historical data.
+    variables:
+      tas: &variable_settings
+        project: CMIP5
+        mip: Amon
+        field: T2Ms
+        ensemble: r1i1p1
+        exp: historical
+        start_year: 1950
+        end_year: 2000
+        additional_datasets:
+          - {dataset: ERA-Interim, project: OBS, tier: 3, type: reanaly, version: 1, start_year: 1980, end_year: 2000}
+    scripts: null
+
   diag_concatenate_exps:
     description: Concatenate historical and RCP 8.5 data
     variables:
       tas:
-        project: CMIP5
-        mip: Amon
-        ensemble: r1i1p1
+        <<: *variable_settings
         exp: [historical, rcp85]
-        start_year: 1950
         end_year: 2050
-        field: T2Ms
-    additional_datasets:
-      - {dataset: ERA-Interim, project: OBS, tier: 3, type: reanaly, version: 1, start_year: 1980, end_year: 2000}
     scripts: null
