--- a/esmvaltool/recipes/recipe_amoc.yml
+++ b/esmvaltool/recipes/recipe_amoc.yml
@@ -39,10 +39,6 @@ documentation:
 
 
 preprocessors:
-
-  prep_timeseries:
-    custom_order: true
-
   prep_timeseries_drake:
     extract_named_regions:
       regions: drake_passage
@@ -68,7 +64,6 @@ diagnostics:
     description: atlantic_meridional_overturning_circulation
     variables:
       amoc:
-        preprocessor: prep_timeseries
         field: TOM
         mip: Omon
         derive: true
@@ -128,7 +123,7 @@ diagnostics:
   # Transect diagnostics
   # --------------------------------------------------
   diag_transects:
-    description: Global Ocean transects
+    description: Stream function zonal mean
     variables:
       msftmyz:
         preprocessor: prep_transect
@@ -154,7 +149,7 @@ diagnostics:
      - {dataset: NorESM1-ME,       project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
      - {dataset: NorESM1-M,        project: CMIP5,    exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
     scripts:
-      Global_Ocean_surface_map:
+      Atlantic_Stream_function_zonal_mean:
         script: ocean/diagnostic_transects.py
         thresholds: [-20, -10., 0., 10., 20.]
         set_y_logscale: False
