--- a/esmvaltool/recipes/recipe_quantilebias.yml
+++ b/esmvaltool/recipes/recipe_quantilebias.yml
@@ -16,7 +16,8 @@ documentation:
     - c3s-magic
 
 datasets:
-  - {dataset: EC-EARTH,       project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
+  - {dataset: EC-EARTH, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
+  - {dataset: GPCP-SG, project: obs4mips, level: L3, version: v2.3, tier: 1}
 
 diagnostics:
   quantilebias:
