--- a/esmvaltool/recipes/recipe_shapeselect_py.yml
+++ b/esmvaltool/recipes/recipe_shapeselect_py.yml
@@ -1,7 +1,9 @@
 ---
 
 datasets:
-  - {dataset: bcc-csm1-1-m,  project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 1998,  end_year: 1999}
+  - {dataset: EC-EARTH, project: CMIP5, mip: Amon, exp: historical, ensemble: r12i1p1, start_year: 1990, end_year: 1999}
+#  - {dataset: CRU, mip: Amon, project: OBS, type: reanaly, version: 1, start_year: 1990, end_year: 1994, tier: 3}
+ #  - {dataset: bcc-csm1-1-m,  project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 1998,  end_year: 1999}
  
 
 preprocessors:
@@ -11,14 +13,19 @@ diagnostics:
   diagnostic1:
     description: Extracting data for user defined shapefile.
     variables:
+      tas:
+        preprocessor: preprocessor_1
+        field: T2Ms
       pr:
         preprocessor: preprocessor_1
         field: T2Ms
     scripts:
       script1:
         script: shapeselect/diag_shapeselect.py
-        shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/MotalaStrom.shp'
+        shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/Elbe.shp'
+        #shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/MotalaStrom.shp'
+        #shppath: 'esmvaltool/diag_scripts/shapeselect/testdata/Thames.shp'
         wgtmet: 'mean_inside'
         write_xlsx: true
         write_netcdf: true
-        evalplot: true
+        evalplot: false
