--- a/esmvaltool/recipes/recipe_landcover.yml
+++ b/esmvaltool/recipes/recipe_landcover.yml
@@ -2,8 +2,9 @@
 ---
 documentation:
   description:
-    Recipe for plotting the area, bias and fraction of landcover classes in
-    comparison to ESA_CCI_LC data.
+    Recipe for plotting the accumulated area, average fraction
+    and bias of landcover classes in comparison to ESA_CCI_LC data
+    for the full globe and large scale regions.
 
   authors:
     - hage_st
