--- a/meta.yaml
+++ b/meta.yaml
@@ -65,6 +65,7 @@ requirements:
     - r-base
     - r-rcpp
     - libgfortran-ng
+    - cdo  
     # TODO: add julia
 test:
   # TODO: add unit tests? This seems to require installing the tests
