--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -23,8 +23,10 @@ CMIP6:
   input_file: '[short_name]_[mip]_[dataset]_[exp]_[ensemble]_[grid]_*.nc'
   output_file: '[project]_[dataset]_[mip]_[exp]_[ensemble]_[field]_[short_name]_[start_year]-[end_year]'
   cmor_type: 'CMIP6'
+  cmor_strict: true
 
 CMIP5:
+  cmor_strict: true
   input_dir:
     default: '/'
     BADC: '[institute]/[dataset]/[exp]/[frequency]/[modeling_realm]/[mip]/[ensemble]/latest/[short_name]'
