--- a/esmvaltool/config-developer.yml
+++ b/esmvaltool/config-developer.yml
@@ -140,7 +140,8 @@ obs4mips:
   input_fx_file:
     default: '[project]_[dataset]_fx_[fx_var].nc'
   output_file: '[project]_[dataset]_[level]_[version]_[field]_[short_name]_[start_year]-[end_year]'
-  cmor_type: 'CMIP5'
+  cmor_type: 'CMIP6'
+  cmor_path: 'obs4mips'
 
 ana4mips:
   input_dir:
