--- a/esmvaltool/recipes/recipe_hyint.yml
+++ b/esmvaltool/recipes/recipe_hyint.yml
@@ -45,12 +45,16 @@ diagnostics:
         # Reference normalization period to be used for normalized indices 
         norm_years: [2006,2009]
         # Select type of plot:
-        # 1) lon/lat maps per individual field/exp/multi-year mean, 2) lon/lat maps per individual field exp-ref-diff/multi-year mean, 
-        # 3) lon/lat maps multi-field/exp-ref-diff/multi-year meani, 4) lon/lat maps multifield/exp/multiyear
-        # 11) timeseries over required individual region/exp,   12) timeseries over multiple regions/exp
-        # 13) timeseries with multiple models, 14) summary trend coefficients multiple regions  
-        # 15) summary trend coefficients multiple models 
-        plot_type: 14
+        # 1) lon/lat maps per individual field/exp/multi-year mean
+        # 2) lon/lat maps per individual field exp-ref-diff/multi-year mean
+        # 3) lon/lat maps multi-field/exp-ref-diff/multi-year mean
+        # 4) lon/lat maps multifield/exp/multiyear
+        # 11) timeseries over required individual region/exp
+        # 12) timeseries over multiple regions/exp
+        # 13) timeseries with multiple models
+        # 14) summary trend coefficients multiple regions
+        # 15) summary trend coefficients multiple models
+        plot_type: [1,2,3,4,10,11,12,13,14,15]
         # User defined label to be added to trends and figures filename
         label: "test"
         # Select regions for timeseries and maps from the following list
