--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -421,6 +421,7 @@ references:
   bianchi12gbc: "Bianchi, D. et al., Global Biogeochem. Cy., 26, GB2009, doi:10.1029/2011GB004209, 2012."
   cionni11acp: "Cionni et al., Atmos. Chem. Phys., 11, 11267-11292, doi:10.5194/acp-11-11267-2011, 2011."
   clivar09jclim: "CLIVAR Madden-Julian Oscillation Working Group, J. Climate, 22, 3006–3030, doi:10.1175/2008JCLI2731.1, 2009."
+  corti99nat: "Corti, S. et al. Nature 398, 799-801, doi:10.1038/19745"
   davini12jclim: "Davini P., C. Cagnazzo, S. Gualdi, and A. Navarra. J. Climate, 25, 6496–6509, doi: 10.1175/JCLI-D-12-00032.1, 2012"
   davini18: "Davini, P. MiLES - Mid Latitude Evaluation System. Zenodo. doi:10.5281/zenodo.1237837, 2018"
   demora2018: "de Mora et al., Geosci. Model Dev., 11, 4215-4240, https://doi.org/10.5194/gmd-11-4215-2018, 2018."
