Added two_variables.ncl diagnostic to anav13 recipe

--- a/esmvaltool/recipes/recipe_anav13jclim.yml
+++ b/esmvaltool/recipes/recipe_anav13jclim.yml
@@ -262,34 +262,27 @@ diagnostics:
         reference_dataset: JMA-TRANSCOM
         plot_units: PgC y-1
         derive: True
-        additional_datasets: &nbp_datasets
-          - {dataset: JMA-TRANSCOM, project: OBS, type: reanaly, version: 1, tier: 3, start_year: 1986, end_year: 2005}
-          - {dataset: BNU-ESM}
-          - {dataset: CanESM2}
-          - {dataset: CESM1-BGC}
-          - {dataset: GFDL-ESM2G}
-          - {dataset: GFDL-ESM2M}
-          - {dataset: HadGEM2-CC}
-          - {dataset: HadGEM2-ES}
-          - {dataset: inmcm4}
-          - {dataset: IPSL-CM5A-LR}
-          - {dataset: IPSL-CM5A-MR}
-          # Overlapping files for several variables at mistral
-          # - {dataset: IPSL-CM5B-LR}
-          - {dataset: MIROC-ESM}
-          - {dataset: MIROC-ESM-CHEM}
-          - {dataset: MPI-ESM-LR}
-          - {dataset: MPI-ESM-MR}
-          - {dataset: NorESM1-ME}
-      nbp_global:
-        <<: *landmaskregrid_Amon_1901_2005_refCRU
-        preprocessor: noop
-        mip: Lmon
-        field: T0M
-        plot_units: PgC y-1
-        derive: True
         additional_datasets:
           - {dataset: GCP, project: OBS, type: reanaly, version: 1, tier: 2, start_year: 1959, end_year: 2015}
+    additional_datasets: &nbp_datasets
+      - {dataset: JMA-TRANSCOM, project: OBS, type: reanaly, version: 1, tier: 3, start_year: 1986, end_year: 2005}
+      - {dataset: BNU-ESM}
+      - {dataset: CanESM2}
+      - {dataset: CESM1-BGC}
+      - {dataset: GFDL-ESM2G}
+      - {dataset: GFDL-ESM2M}
+      - {dataset: HadGEM2-CC}
+      - {dataset: HadGEM2-ES}
+      - {dataset: inmcm4}
+      - {dataset: IPSL-CM5A-LR}
+      - {dataset: IPSL-CM5A-MR}
+      # Overlapping files for several variables at mistral
+      # - {dataset: IPSL-CM5B-LR}
+      - {dataset: MIROC-ESM}
+      - {dataset: MIROC-ESM-CHEM}
+      - {dataset: MPI-ESM-LR}
+      - {dataset: MPI-ESM-MR}
+      - {dataset: NorESM1-ME}
     scripts:
       main_global:
         <<: *main_global
@@ -463,59 +456,58 @@ diagnostics:
         evolution_plot_ref_dataset: MTE
         evolution_plot_anomaly: False
 
-  # FIXME: multiple variables not supported yet (#531)
-  # diag_two_vars_scatter:
-  #   description: Two-variable scatter plot for cSoil and cVeg (Figure 12).
-  #   themes:
-  #     - phys
-  #   realms:
-  #     - land
-  #   variables:
-  #     cSoil_grid:
-  #       <<: *regrid_Lmon_1986_2005_refLAI3g
-  #       reference_dataset: HWSD
-  #       plot_units: PgC
-  #       additional_datasets:
-  #         - {dataset: HWSD, project: OBS, type: ground, version: 1, start_year: 2000, end_year: 2000, tier: 2}
-  #     cVeg_grid:
-  #       <<: *regrid_Lmon_1986_2005_refLAI3g
-  #       reference_dataset: NDP
-  #       plot_units: PgC
-  #       additional_datasets:
-  #         - {dataset: NDP, project: OBS, type: ground, version: 017b, start_year: 2000, end_year: 2000, tier: 2}
-  #   additional_datasets:
-  #     - {dataset: BNU-ESM}
-  #     # - {dataset: CanESM2}
-  #     - {dataset: CESM1-BGC}
-  #     - {dataset: GFDL-ESM2G}
-  #     - {dataset: GFDL-ESM2M}
-  #     - {dataset: HadGEM2-CC}
-  #     - {dataset: HadGEM2-ES}
-  #     # - {dataset: inmcm4}
-  #     - {dataset: IPSL-CM5A-LR}
-  #     - {dataset: IPSL-CM5A-MR}
-  #     # Overlapping files for several variables at mistral
-  #     # - {dataset: IPSL-CM5B-LR}
-  #     - {dataset: MIROC-ESM}
-  #     - {dataset: MIROC-ESM-CHEM}
-  #     - {dataset: MPI-ESM-LR}
-  #     - {dataset: MPI-ESM-MR}
-  #     - {dataset: NorESM1-ME}
-  #   scripts:
-  #     scat_global: &scat_glob
-  #       script: carbon_cycle/two_variables.ncl
-  #       legend_year_outside: False
-  #       styleset: CMIP5
-  #       region: Global
-  #     scat_nh:
-  #       <<: *scat_glob
-  #       region: Northern Hemisphere
-  #     scat_sh:
-  #       <<: *scat_glob
-  #       region: Southern Hemisphere
-  #     scat_trop:
-  #       <<: *scat_glob
-  #       region: Tropics
+  diag_two_vars_scatter:
+    description: Two-variable scatter plot for cSoil and cVeg (Figure 12).
+    themes:
+      - phys
+    realms:
+      - land
+    variables:
+      cSoil_grid:
+        <<: *regrid_Lmon_1986_2005_refLAI3g
+        reference_dataset: HWSD
+        plot_units: PgC
+        additional_datasets:
+          - {dataset: HWSD, project: OBS, type: ground, version: 1, start_year: 2000, end_year: 2000, tier: 2}
+      cVeg_grid:
+        <<: *regrid_Lmon_1986_2005_refLAI3g
+        reference_dataset: NDP
+        plot_units: PgC
+        additional_datasets:
+          - {dataset: NDP, project: OBS, type: ground, version: 017b, start_year: 2000, end_year: 2000, tier: 2}
+    additional_datasets:
+      - {dataset: BNU-ESM}
+      # - {dataset: CanESM2}
+      - {dataset: CESM1-BGC}
+      - {dataset: GFDL-ESM2G}
+      - {dataset: GFDL-ESM2M}
+      - {dataset: HadGEM2-CC}
+      - {dataset: HadGEM2-ES}
+      # - {dataset: inmcm4}
+      - {dataset: IPSL-CM5A-LR}
+      - {dataset: IPSL-CM5A-MR}
+      # Overlapping files for several variables at mistral
+      # - {dataset: IPSL-CM5B-LR}
+      - {dataset: MIROC-ESM}
+      - {dataset: MIROC-ESM-CHEM}
+      - {dataset: MPI-ESM-LR}
+      - {dataset: MPI-ESM-MR}
+      - {dataset: NorESM1-ME}
+    scripts:
+      scat_global: &scat_glob
+        script: carbon_cycle/two_variables.ncl
+        legend_year_outside: False
+        styleset: CMIP5
+        region: Global
+      scat_nh:
+        <<: *scat_glob
+        region: Northern Hemisphere
+      scat_sh:
+        <<: *scat_glob
+        region: Southern Hemisphere
+      scat_trop:
+        <<: *scat_glob
+        region: Tropics
 
   # FIXME: irregular regridding not supported yet (#550)
   # diag_main_fgco2:
