--- a/esmvaltool/recipes/recipe_quantilebias.yml
+++ b/esmvaltool/recipes/recipe_quantilebias.yml
@@ -17,22 +17,19 @@ documentation:
 
 datasets:
   - {dataset: EC-EARTH, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
-  - {dataset: GPCP-SG, project: obs4mips, level: L3, version: v2.3, tier: 1}
+  - {dataset: HadCM3, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
+  - {dataset: MPI-ESM-MR, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
+  - {dataset: GPCP-SG, project: obs4mips, level: L3, version: v2.3, tier: 1, start_year: 1997, end_year: 1997}
 
 diagnostics:
   quantilebias:
-    description: tool for calculation of precipitation quantile bias 
+    description: Tool for calculation of precipitation quantile bias 
     variables:
       pr:
-        reference_dataset: "EC-EARTH"
-        mip: day
+        reference_dataset: "GPCP-SG"
+        mip: Amon
         field: T2Ds
     scripts:
       main:
         script: quantilebias/quantilebias.R
         perc_lev: 75
-        # reference global precipitation monthly climatology data:
-        # suggested dataset from the GPCP project at https://precip.gsfc.nasa.gov/
-        # already converted dataset can be downloaded at http://wilma.to.isac.cnr.it/arnone/data/gpcp_22.nc 
-        ref_data_file: "/work/datasets/obs/unsorted/GPCP/pr/data/mon/gpcp_22.nc"
-
